# Multi-Source-Candidate-Data-Transformer

./: .gitignore  LICENSE  README.md  app.py  debug_resume.txt  demo_output.json  design_document.md  pyproject.toml  requirements.txt  task_progress.md  test_debug.py  test_deep_path.py  test_full_pipeline.py  test_projector_bug.py
.streamlit/: config.toml
config/: output_schema.yaml  pipeline_config.yaml
data/samples/: ats_sample.json  candidates.csv  linkedin_sample.json  notes_sample.txt  real_world_resume.txt  resume_sample.json  resume_text_sample.txt  test_resume_full.txt
frontend/: app.js  index.html  style.css
src/data_transformer/: __init__.py
src/data_transformer/adapters/: __init__.py  ats_adapter.py  base.py  csv_adapter.py  github_adapter.py  linkedin_adapter.py  notes_adapter.py  resume_adapter.py
src/data_transformer/api/: app.py
src/data_transformer/cli/: main.py
src/data_transformer/conflict_resolution/: __init__.py  base.py  highest_confidence.py  latest_wins.py  llm_resolver.py  majority_vote.py  priority_order.py
src/data_transformer/deduplication/: __init__.py  matcher.py
src/data_transformer/merger/: __init__.py  merge_engine.py
src/data_transformer/normalizers/: __init__.py  company.py  date.py  email.py  location.py  name.py  phone.py  skills.py
src/data_transformer/pipeline/: __init__.py  clusterer.py  identity_resolver.py  postprocessor.py  (+1 more)
tests/: conftest.py  test_batch_processing.py  test_conflict_resolution.py  test_deduplication.py  test_normalizers.py  test_pipeline.py  test_projection.py  test_refactoring.py
(+10 files in other folders)
